--- a/demo.html
+++ b/demo.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 
-		<script src="build/three.min.js"></script>
+		<script src="build/three.js"></script>
 		<script src="otherRoom.js"></script>
 
 	</body>
