--- a/demo.html
+++ b/demo.html
@@ -13,7 +13,9 @@
 	<body>
 
 		<script src="build/three.js"></script>
+		<script src="OrbitControls.js"></script>
 		<script src="otherRoom.js"></script>
+
 
 	</body>
 </html>
