--- a/demo.html
+++ b/demo.html
@@ -14,6 +14,7 @@
 
 		<script src="build/three.js"></script>
 		<script src="OrbitControls.js"></script>
+		<script src="http://threejs.org/examples/js/loaders/OBJLoader.js"></script>
 		<script src="otherRoom.js"></script>
 
 
