--- a/demo.html
+++ b/demo.html
@@ -13,9 +13,11 @@
 	<body>
 
 		<script src="build/three.js"></script>
-		<script src="OrbitControls.js"></script>
-		<script src="http://threejs.org/examples/js/loaders/OBJLoader.js"></script>
-		<script src="otherRoom.js"></script>
+		<script src="js/OrbitControls.js"></script>
+		<script src="js/loaders/DDSLoader.js"></script>
+		<script src="js/loaders/MTLLoader.js"></script>
+		<script src="js/loaders/OBJMTLLoader.js"></script>
+		<script src="js/otherRoom.js"></script>
 
 
 	</body>
