--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<script src="build/three.js"></script>
 		<script src="build/jquery-2.1.4.js"></script>
-        <script src="audio.js"></script>
+        <script src="js/audio.js"></script>
 		<script src="js/OrbitControls.js"></script>
 		<script src="js/loaders/DDSLoader.js"></script>
 		<script src="js/loaders/MTLLoader.js"></script>
