added code to make testsphere of fire to work

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<script src="js/loaders/MTLLoader.js"></script>
 		<script src="js/loaders/OBJMTLLoader.js"></script>
 		<script src="js/otherRoom.js"></script>
+		<script src="js/fire.js"></script>
 
 
 	</body>
