bridge + basic textures

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<script src="js/loaders/DDSLoader.js"></script>
 		<script src="js/loaders/MTLLoader.js"></script>
 		<script src="js/loaders/OBJMTLLoader.js"></script>
+        <script src="js/loaders/OBJLoader.js"></script>
 		<script src="js/otherRoom.js"></script>
 
 
