added homepage elements and disabled orbitcontrols

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>otherRoom</title>
+		<title>Other Room</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="demo.css">
@@ -21,6 +21,16 @@
 		<script src="js/WaterShader.js"></script>
 		<script src="js/otherRoom.js"></script>
 		<script src="js/fire.js"></script>
+
+        <div id="infoicons">
+            <img height="40px" src="images/info.png"/>
+            <img height="40px" src="images/arrow.png"/>
+        </div>
+
+        <div id="description" class="info"><h1>Description</h1></div>
+        <div id="challenges" class="info"><h1>Challenges and lessons</h1></div>
+        <div id="people" class="info"><h1>People</h1></div>
+        <div id="individual" class="info"><h1>Individual Work</h1></div>
 
 
 
