background ambient sound

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
         <script src="js/fireShader.js"></script>
         <script src="js/fire.js"></script>
 
+  <audio autoplay loop>
+      <source src="nature.wav">
+  </audio
+
+
 
         <div id="infoicons">
             <img height="40px" src="images/info.png"/>
